--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <canvas id="canvas1"></canvas>
     <img id="playerImage" src="./assets/player.png">
-    <img id="backgroundImage" src="./assets/background_single.png">
+    <img id="backgroundImage" src="./assets/background.png">
     <img id="enemyImage" src="./assets/enemy_1.png">
     
 
